Add XGBoost final model with SHAP explainability

--- a/notebooks/02_agent_testing.ipynb
+++ b/notebooks/02_agent_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "32c43263",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "6327361b",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "4                      0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "e1fe3ef4",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,6 +155,107 @@
    "source": [
     "physical_output.shape\n",
     "physical_output.isna().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d93e2a44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PhysicalAgentMetadata(features_processed=['BloodPressure', 'BMI', 'SkinThickness'], original_zero_counts={'BloodPressure': 35, 'BMI': 11, 'SkinThickness': 227}, imputation_medians={'BloodPressure': 72.0, 'BMI': 32.3, 'SkinThickness': 29.0}, imputed_counts={'BloodPressure': 35, 'BMI': 11, 'SkinThickness': 227})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadata = physical_agent.get_metadata()\n",
+    "\n",
+    "metadata\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f4c9fa2",
+   "metadata": {},
+   "source": [
+    "TO TEST LAB AGENT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "83a9a042",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(   Glucose  Insulin  Insulin_missing\n",
+       " 0    148.0    125.0                1\n",
+       " 1     85.0    125.0                1\n",
+       " 2    183.0    125.0                1\n",
+       " 3     89.0     94.0                0\n",
+       " 4    137.0    168.0                0,\n",
+       " LabAgentMetadata(features_processed=['Glucose', 'Insulin'], original_zero_counts={'Glucose': 5, 'Insulin': 374}, imputation_medians={'Glucose': 117.0, 'Insulin': 125.0}, imputed_counts={'Glucose': 5, 'Insulin': 374}))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from agents.lab_agent import LabAgent\n",
+    "\n",
+    "lab_agent = LabAgent()\n",
+    "lab_output = lab_agent.preprocess(df)\n",
+    "\n",
+    "lab_metadata = lab_agent.get_metadata()\n",
+    "\n",
+    "lab_output.head(), lab_metadata\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32221407",
+   "metadata": {},
+   "source": [
+    "Lab Agent test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "36780946",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'DemographicAgent' from 'agents.demographic_agent' (c:\\Users\\srira\\AgentXHealth\\notebooks\\..\\agents\\demographic_agent.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01magents\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdemographic_agent\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DemographicAgent\n\u001b[0;32m      3\u001b[0m demo_agent \u001b[38;5;241m=\u001b[39m DemographicAgent()\n\u001b[0;32m      4\u001b[0m demo_output \u001b[38;5;241m=\u001b[39m demo_agent\u001b[38;5;241m.\u001b[39mpreprocess(df)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'DemographicAgent' from 'agents.demographic_agent' (c:\\Users\\srira\\AgentXHealth\\notebooks\\..\\agents\\demographic_agent.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from agents.demographic_agent import DemographicAgent\n",
+    "\n",
+    "demo_agent = DemographicAgent()\n",
+    "demo_output = demo_agent.preprocess(df)\n",
+    "demo_metadata = demo_agent.get_metadata()\n",
+    "\n",
+    "demo_output.head(), demo_metadata\n"
    ]
   }
  ],
