--- a/notebooks/02_agent_testing.ipynb
+++ b/notebooks/02_agent_testing.ipynb
@@ -1999,6 +1999,176 @@
     "print(\"Predicted diabetes probability:\", y_proba_final[patient_idx])\n",
     "print(\"Risk category:\", \"High Risk\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "54529070",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>Insulin</th>\n",
+       "      <th>Insulin_missing</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>SkinThickness</th>\n",
+       "      <th>BloodPressure_missing</th>\n",
+       "      <th>BMI_missing</th>\n",
+       "      <th>SkinThickness_missing</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>True_Label</th>\n",
+       "      <th>Predicted_Probability</th>\n",
+       "      <th>Predicted_Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>159.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.792613</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>672</th>\n",
+       "      <td>68.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>35.5</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>47</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.073963</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>700</th>\n",
+       "      <td>122.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>35.9</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.048866</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630</th>\n",
+       "      <td>114.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.342496</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>32.3</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.018482</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Glucose  Insulin  Insulin_missing  BloodPressure   BMI  SkinThickness  \\\n",
+       "44     159.0    125.0                1           64.0  27.4           29.0   \n",
+       "672     68.0     49.0                0          106.0  35.5           23.0   \n",
+       "700    122.0    200.0                0           76.0  35.9           27.0   \n",
+       "630    114.0    125.0                1           64.0  27.4           29.0   \n",
+       "81      74.0    125.0                1           72.0  32.3           29.0   \n",
+       "\n",
+       "     BloodPressure_missing  BMI_missing  SkinThickness_missing  Age  \\\n",
+       "44                       0            0                      1   40   \n",
+       "672                      0            0                      0   47   \n",
+       "700                      0            0                      0   26   \n",
+       "630                      0            0                      1   34   \n",
+       "81                       1            1                      1   22   \n",
+       "\n",
+       "     Pregnancies  True_Label  Predicted_Probability  Predicted_Label  \n",
+       "44             7           0               0.792613                1  \n",
+       "672           10           0               0.073963                0  \n",
+       "700            2           0               0.048866                0  \n",
+       "630            7           1               0.342496                0  \n",
+       "81             2           0               0.018482                0  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_output = X_test.copy()\n",
+    "final_output[\"True_Label\"] = y_test.values\n",
+    "final_output[\"Predicted_Probability\"] = y_proba_final\n",
+    "final_output[\"Predicted_Label\"] = y_pred_final\n",
+    "\n",
+    "final_output.head()\n"
+   ]
   }
  ],
  "metadata": {
