--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "24635ada",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,8 +132,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b499f40",
+   "metadata": {},
+   "source": [
+    "## Agent-Wise Preprocessing Strategy (Design)\n",
+    "\n",
+    "### Lab Agent\n",
+    "- Glucose: Low missing values → suitable for statistical imputation\n",
+    "- Insulin: Extremely high missing values → requires special handling\n",
+    "- DiabetesPedigreeFunction: No missing values → used as-is\n",
+    "\n",
+    "Rationale:\n",
+    "Lab measurements differ in availability. Insulin measurements are sparse\n",
+    "and may introduce noise if blindly imputed, while glucose is reliable.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Physical Agent\n",
+    "- BMI: Low missing values → suitable for imputation\n",
+    "- BloodPressure: Moderate missing values → imputation acceptable\n",
+    "- SkinThickness: High missing values → candidate for exclusion or robust imputation\n",
+    "\n",
+    "Rationale:\n",
+    "SkinThickness shows high sparsity and may reduce model stability.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Demographic Agent\n",
+    "- Age, Pregnancies: No missing values → no preprocessing required\n",
+    "\n",
+    "Rationale:\n",
+    "Demographic data is complete and stable.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1a662466",
    "metadata": {},
    "outputs": [
@@ -145,7 +180,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a35c0b85",
    "metadata": {},
    "outputs": [
@@ -175,7 +210,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
